[gd_scene load_steps=9 format=3 uid="uid://bsea0j2wt8j0p"]

[ext_resource type="Script" path="res://world.gd" id="1_1tifn"]
[ext_resource type="PackedScene" uid="uid://b083a8jgx5br2" path="res://Entities/Player/player.tscn" id="2_gwxft"]
[ext_resource type="PackedScene" uid="uid://c2mae4lmw2kqp" path="res://UI/level_completed.tscn" id="5_nporc"]
[ext_resource type="PackedScene" uid="uid://n1beymi47t1x" path="res://UI/death_message.tscn" id="6_u4gtd"]
[ext_resource type="PackedScene" uid="uid://bjvalh71ivk75" path="res://level_tile_map.tscn" id="7_ivhwj"]

[sub_resource type="Animation" id="Animation_4lqwk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["start in: 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ri3c0"]
resource_name = "count_down"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["start in: 3", "start in: 2
", "start in: 1
"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lu3ed"]
_data = {
"RESET": SubResource("Animation_4lqwk"),
"count_down": SubResource("Animation_ri3c0")
}

[node name="World" type="Node2D"]
script = ExtResource("1_1tifn")

[node name="Player" parent="." instance=ExtResource("2_gwxft")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_nporc")]
visible = false

[node name="DeathMessage" parent="CanvasLayer" instance=ExtResource("6_u4gtd")]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -2.0
offset_right = -99.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.388235)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "start in: 3"

[node name="LevelTileMap" parent="." instance=ExtResource("7_ivhwj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_lu3ed")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
